# Smart-calculator

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile  creditview.cc  creditview.ui  main.cc
src/build-smartCalc-Desktop_x86_darwin_generic_mach_o_64bit-Release/: CMakeCache.txt  cmake_install.cmake  qtcsettings.cmake
src/build-smartCalc-Desktop_x86_darwin_generic_mach_o_64bit-Release/.cmake/api/v1/reply/: cache-v2-4494f4cf9e9353371993.json  cmakeFiles-v1-cf422a016ce9d9559741.json  codemodel-v2-de4b68aede26333bcb9f.json  index-2023-02-20T04-27-19-0582.json  target-SmartCalculator-Release-d6ff3d58e384297a3e65.json  target-SmartCalculator_autogen-Release-5858b431550932c24a97.json
src/build-smartCalc-Desktop_x86_darwin_generic_mach_o_64bit-Release/.qtc_clangd/: compile_commands.json
src/build-smartCalc-Desktop_x86_darwin_generic_mach_o_64bit-Release/.qtc_clangd/.cache/clangd/index/: QDebug.DC373F6DEB6A53F7.idx  __stddef_max_align_t.h.552F0324C011E587.idx  __wmmintrin_aes.h.BFDC095D73C1F3CE.idx  __wmmintrin_pclmul.h.7AEEC99E070D2B99.idx  (+139 more)
src/build-smartCalc-Desktop_x86_darwin_generic_mach_o_64bit-Release/SmartCalculator_autogen/: mocs_compilation.cpp
src/controller/: calcController.cc  calcController.h  controller.cc  controller.h
src/documentation/: README.MD  smartCalcInfo.html
src/model/: calcModel.cc  calcModel.h  creditCalc.cc  creditCalc.h  graphBuilder.cc  graphBuilder.h  main.cc  mathCalc.cc  mathCalc.h  model.h  token.cc  token.h  tokenizator.cc  tokenizator.h  validator.cc  validator.h
src/model/credit/: creditCalc.cc  creditCalc.h
src/model/math/: mathCalc.cc  mathCalc.h  token.cc  token.h  tokenizator.cc  tokenizator.h  validator.cc  validator.h
src/smartCalc/: CMakeLists.txt  calcView.cc  calcView.h  calcView.ui  main.cc  smartcalc.cc
src/tests/: creditTest.cc  mathTests.cc  tests.cc
src/view/: calcView.cc  calcView.h  calcView.ui  creditView.cc  creditView.h  creditView.ui  graphView.cc  graphView.h  graphView.ui
src/view/credit/: creditView.cc  creditView.h  creditView.ui
src/view/graph/: graphView.cc  graphView.h
src/view/math/: calcView.cc  calcView.h
